# partboot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  build.bat  build.ps1
.github/workflows/: efi-smoke.yml  release-assets-guard.yml  winget-submit.yml
.planning/debug/resolved/: uefi-boot-entry-naming.md
assets/efi/: README.txt  checksums.txt  grubx64.efi
docs/: future-work.md  h-s-test-commands.txt  release-efi-provenance.md  usage.md
docs/architecture/: grub-strategy.md
docs/plans/: 2026-05-07-shutdown-loop-fix.md  2026-05-08-12-directions-and-ux-plan.md  2026-05-08-clean-menu-profiles.md  2026-05-08-direction-6-release-packaging.md  2026-05-08-extracted-casper.md  2026-05-08-partboot-mvp.md  2026-05-08-tailored-grub-menu.md  2026-05-12-phase-4-platform-integration.md  README.md
scripts/: build-standalone-grub.ps1  check-release-assets.ps1  efi-smoke-test.sh  package-release.ps1
src/: boot_entry.rs  cache.rs  extract.rs  grub.rs  iso.rs  layout.rs  main.rs  profile.rs  spinner.rs
